[package]
name = "miette_helper"
version = "0.1.0"
edition = "2021"
authors = ["LeSnake <dev.lesnake@posteo.de>"]
description = "Crate providing helper macros for miette"
license = "MIT OR Apache-2.0"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
miette = { version = "5.3" }

